--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,31 @@ body {
     background-color:rgb(133, 207, 239); 
 }
 
+.table-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+.create-container,
+table {
+  width: 900px; 
+  max-width: 100%; 
+}
+
+.create-container {
+  text-align: left; 
+  margin-bottom: 10px; 
+}
+
+.form-container {
+    display:flex; 
+    justify-content:center; 
+    align-items:center; 
+    height:100vh; 
+}
+
 .create-btn, button, a {
     text-decoration:none; 
     color:white; 
@@ -74,20 +99,30 @@ tr:hover {
 
 #create-form {
     background-color:aliceblue; 
-    border-radius:20px; 
+    border-radius:100px; 
     width:min-content; 
-    padding:20px; 
+    padding:100px; 
 }
 
 .inputs-container {
     display:grid; 
-    gap:20px; 
+    gap:20px 50px; 
     grid-template-columns: 1fr 1fr; 
 }
 
+input {
+    padding:5px 10px; 
+}
+
 label {
+    font-size:1.2rem; 
     display:block; 
 }
+
+.add-submit-btn {
+    font-size:1.2rem; 
+}
+
 
 .actions {
     display:flex; 
