--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,30 +7,34 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <form method="POST" action="<%= team ? "/edit/" + team.id : "/new" %>" id="create-form">
-        <div class="inputs-container">
-            <div>
-                <label for="name">Team Name</label>
-                <input value="<%= team ? team.name : "" %>" id="name" name="name" type="text" required>
-            </div>
+    <div class="form-container">
 
-            <div>
-                <label for="nation">Nation</label>
-                <input value="<%= team ? team.nation : "" %>" id="nation" name="nation" type="text" required>
-            </div>
+        <form method="POST" action="<%= team ? "/edit/" + team.id : "/new" %>" id="create-form">
+            <h1><%= !team ? "Create New Team" : "Edit Team" %></h1>
+            <div class="inputs-container">
+                <div>
+                    <label for="name">Team Name</label>
+                    <input value="<%= team ? team.name : "" %>" id="name" name="name" type="text" required>
+                </div>
 
-            <div>
-                <label for="league">League</label>
-                <input value="<%= team ? team.league : "" %>" id="league" name="league" type="text" required>
-            </div>
+                <div>
+                    <label for="nation">Nation</label>
+                    <input value="<%= team ? team.nation : "" %>" id="nation" name="nation" type="text" required>
+                </div>
 
-            <div>
-                <label for="manager">Manager</label>
-                <input value="<%= team ? team.manager : "" %>" id="manager" name="manager" type="text" required>
-            </div>
-        </div>
-        <button class="add-submit-btn" type="submit">Submit</button>
+                <div>
+                    <label for="league">League</label>
+                    <input value="<%= team ? team.league : "" %>" id="league" name="league" type="text" required>
+                </div>
 
-    </form>
+                <div>
+                    <label for="manager">Manager</label>
+                    <input value="<%= team ? team.manager : "" %>" id="manager" name="manager" type="text" required>
+                </div>
+            </div>
+            <button class="add-submit-btn" type="submit">Submit</button>
+
+        </form>
+    </div>
 </body>
 </html>
